# fys4150-fortran

./: .gitignore  README.md
project1/: CMakeLists.txt  README.md  example.f90  general.f90  plot.gpi  special.f90
project4/: Makefile  Makefile.intel  README.md  abeljob.sh  cafconfig.txt  example.f90  interactive.sh  ising.f90  plot.gpi
